// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using the tool Creates a shape and transitions to select.idle after pointer up: created line 1`] = `
TLLineShape {
  "clone": [Function],
  "getBounds": [Function],
  "getCachedSerialized": [Function],
  "getCenter": [Function],
  "getRotatedBounds": [Function],
  "getSerialized": [Function],
  "hideContextBar": false,
  "hideResizeHandles": false,
  "hideRotateHandle": false,
  "hideSelection": false,
  "hideSelectionDetail": false,
  "hitTestBounds": [Function],
  "hitTestLineSegment": [Function],
  "hitTestPoint": [Function],
  "isAspectRatioLocked": false,
  "isDirty": true,
  "isEditable": false,
  "isStateful": false,
  "lastSerialized": Object {},
  "nonce": 0,
  "normalizedHandles": Array [],
  "onHandleChange": [Function],
  "onResize": [Function],
  "onResizeStart": [Function],
  "props": Object {
    "handles": Array [
      Object {
        "point": Array [
          0,
          0,
        ],
      },
      Object {
        "point": Array [
          1,
          1,
        ],
      },
    ],
    "id": "test_line",
    "parentId": "page1",
    "point": Array [
      100,
      100,
      0.5,
    ],
    "type": "line",
  },
  "showCloneHandles": false,
  "stayMounted": false,
  "type": "line",
  "validateProps": [Function],
  "version": 1,
}
`;

exports[`When using the tool Transitions to creating and creates a dot shape on pointer down: created dot 1`] = `
TLDotShape {
  "clone": [Function],
  "getBounds": [Function],
  "getCachedSerialized": [Function],
  "getCenter": [Function],
  "getRotatedBounds": [Function],
  "getSerialized": [Function],
  "hideContextBar": false,
  "hideResizeHandles": true,
  "hideRotateHandle": true,
  "hideSelection": true,
  "hideSelectionDetail": true,
  "hitTestBounds": [Function],
  "hitTestLineSegment": [Function],
  "hitTestPoint": [Function],
  "isAspectRatioLocked": false,
  "isDirty": true,
  "isEditable": false,
  "isStateful": false,
  "lastSerialized": Object {},
  "nonce": 0,
  "onHandleChange": [Function],
  "onResize": [Function],
  "props": Object {
    "id": "test_dot",
    "parentId": "page1",
    "point": Array [
      94,
      94,
    ],
    "radius": 6,
    "type": "dot",
  },
  "showCloneHandles": false,
  "stayMounted": false,
  "type": "dot",
  "validateProps": [Function],
  "version": 1,
}
`;
